--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           <div class="pt-12 pb-8">
             <button
               class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full"
-              href="mailto:jay@jaypark.org"
+              onClick="location.href
+              ='mailto:jay@jaypark.org'"
             >
               Get In Touch
             </button>
